# ARC_decon

./: .gitignore  1-4_space_3-09.txt  10-13_space_3-09.txt  13-13_space_3-14.txt  13-1_space_3-14.txt  16--8_space_3-22.txt  19--2_space_3-22.txt  19--5_space_3-22.txt  19-7_space_3-22.txt  22--14_space_3-22.txt  22--2_space_3-22.txt  25--11_space_3-22.txt  25--17_space_3-22.txt  25--2_space_3-22.txt  25--5_space_3-22.txt  25--8_space_3-22.txt  25-7_space_3-22.txt  28-7_space_3-22.txt  2_21_am241.txt  2_21_natU.txt  2_21_ra226.txt  3_1_co57.txt  3_28_ntrlU_2hr.txt  3_2_ba133.txt  3_2_cf252.txt  3_2_th232.txt  4-16_space_3-09.txt  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile.sh  data_read  data_read.cc  data_read.cpp  decon_main  decon_main.cc  gold.cc  readme.md  source_sim.txt  (+1 more)
debugging/: space_shift_Err  space_shift_err
details/: to_do
exp_response/: 2_21 hour counts background.txt  2_21_co60.txt  2_21_cs137.txt  3_28_bkg_12hr.txt  3_28_u235_2hr.txt  3_29_co6_2hr.txt  3_29_ra226_2hr.txt  5m_Am241_10micCi.txt  5m_BG_2-15-18.txt  5m_Co60.txt  5m_Cs137_2-15-18.txt  5m_depU_2-15-18.txt
include/: data_read.hh  gold_decon.hh  gold_decon_test.hh  histo.hh  resp_read.hh  sim_source.hh  spatial_decon.hh
response/: 1-13_space_3-09.txt  1-16_space_3-09.txt  1-1_space_3-09.txt  10-4_space_3-09.txt  13-10_space_3-14.txt  13-16_space_3-14.txt  13-4_space_3-14.txt  13-7_space_3-14.txt  16-13_space_3-14.txt  16-7_space_3-14.txt  19--8_space_3-22.txt  19-4_space_3-22.txt  22-1_space_3-22.txt  22-4_space_3-22.txt  22-7_space_3-22.txt  25--14_space_3-22.txt  (+15 more)
(+248 files in other folders)
